fixed quide alignment

--- a/nest/src/app/raven/containers/timeline/timeline.component.css
+++ b/nest/src/app/raven/containers/timeline/timeline.component.css
@@ -78,10 +78,11 @@ mat-sidenav-container {
 }
 
 .row-container {
-  display: flex;
+  /* display: flex; */
   padding-left: 15px;
 }
 
 .row {
   flex: 1 0 auto;
+  padding-left: 15px;
 }
